--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
       href="favicon-196x196.png"
       sizes="196x196"
     />
-    <link rel="stylesheet" href="assets/css/main.min.css" />
+    <link rel="stylesheet" href="build/assets/css/main.min.css" />
     <!-- Video by thiago japyassu on pexels.com - https://www.pexels.com/@japyassu -->
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const yrSpan = document.querySelector(".year");
+        const currentYear = new Date().getFullYear();
+        yrSpan.textContent = currentYear;
+      });
+    </script>
   </head>
   <body>
     <header class="nav">
@@ -20,8 +27,8 @@
         <ul class="nav__list">
           <li class="nav__item"><a href="index.html">HOME</a></li>
           <li class="nav__item"><a href="about.html">INFO</a></li>
-          <li class="nav__item"><a href="#">PORTFOLIO</a></li>
-          <li class="nav__item"><a href="#">CONTACT</a></li>
+          <li class="nav__item"><a href="portfolio.html">PORTFOLIO</a></li>
+          <li class="nav__item"><a href="contact.html">CONTACT</a></li>
         </ul>
       </nav>
     </header>
@@ -29,7 +36,7 @@
       <section class="hero">
         <div class="hero-video_ctnr">
           <video
-            src="assets/vid/BoatInSea_1937807.mp4"
+            src="build/assets/vid/BoatInSea_1937807.mp4"
             id="hero-vid"
             type="video/mp4"
             autoplay
@@ -45,12 +52,19 @@
         </div>
         <div class="hero__shape"></div>
 
-        <a href="#about" class="btn">Get in touch</a>
+        <a href="contact.html" class="btn">Get in touch</a>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="copyright">
+        <p>
+          <span class="year">1907</span> -
+          <a href="www.aryvidot.com" target="_blank">ARY VIDOT</a
+          ><span class="dot"> -</span> ALL RIGHTS RESERVED
+        </p>
+      </div>
+    </footer>
 
-    <script src="./assets/js/vendors.js"></script>
-    <script src="./assets/js/app.js"></script>
+    <script src="/source/js/app.js"></script>
   </body>
 </html>
