Menu toggle added, JS & CSS

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       href="favicon-196x196.png"
       sizes="196x196"
     />
-    <link rel="stylesheet" href="build/assets/css/main.min.css" />
+    <link rel="stylesheet" href="build/assets/css/style.css" />
     <!-- Video by thiago japyassu on pexels.com - https://www.pexels.com/@japyassu -->
-    <script>
+    <!-- <script>
       document.addEventListener("DOMContentLoaded", function () {
         const yrSpan = document.querySelector(".year");
         const currentYear = new Date().getFullYear();
         yrSpan.textContent = currentYear;
       });
-    </script>
+    </script> -->
   </head>
   <body>
     <header class="nav">
@@ -26,14 +26,19 @@
         <h1 class="nav__logo">ARY VIDOT</h1>
         <ul class="nav__list">
           <li class="nav__item"><a href="index.html">HOME</a></li>
+          <li class="nav__item"><a href="#">PORTFOLIO</a></li>
           <li class="nav__item"><a href="about.html">INFO</a></li>
-          <li class="nav__item"><a href="portfolio.html">PORTFOLIO</a></li>
           <li class="nav__item"><a href="contact.html">CONTACT</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section class="hero">
+        <div class="container">
+          <div class="stick stick-1"></div>
+          <div class="stick stick-2"></div>
+          <div class="stick stick-3"></div>
+        </div>
         <div class="hero-video_ctnr">
           <video
             src="build/assets/vid/BoatInSea_1937807.mp4"
@@ -50,21 +55,21 @@
           </h1>
           <h2 class="hero__description">Web Developer</h2>
         </div>
-        <div class="hero__shape"></div>
+        <!-- <div class="hero__shape"></div> -->
 
         <a href="contact.html" class="btn">Get in touch</a>
       </section>
+      <!-- <footer>
+        <div class="copyright">
+          <p>
+            <span class="year">1907</span> -
+            <a href="www.aryvidot.com" target="_blank">ARY VIDOT</a
+            ><span class="dot"> -</span> ALL RIGHTS RESERVED
+          </p>
+        </div>
+      </footer> -->
     </main>
-    <footer>
-      <div class="copyright">
-        <p>
-          <span class="year">1907</span> -
-          <a href="www.aryvidot.com" target="_blank">ARY VIDOT</a
-          ><span class="dot"> -</span> ALL RIGHTS RESERVED
-        </p>
-      </div>
-    </footer>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/source/js/app.js"></script>
   </body>
 </html>
