--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
       href="favicon-196x196.png"
       sizes="196x196"
     />
-    <link rel="stylesheet" href="build/assets/css/main.min.css" />
+    <link rel="stylesheet" href="build/assets/css/style.css" />
     <!-- Video by thiago japyassu on pexels.com - https://www.pexels.com/@japyassu -->
     <script>
       document.addEventListener("DOMContentLoaded", function () {
@@ -33,7 +33,14 @@
       </nav>
     </header>
     <main>
-      <section></section>
+      <section>
+        <h1>CONTACT</h1>
+        <div class="form">
+          <input type="text" name="name" />
+          <input type="text" name="email" />
+          <input type="text" name />
+        </div>
+      </section>
     </main>
     <footer>
       <div class="copyright">
@@ -44,7 +51,7 @@
         </p>
       </div>
     </footer>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/source/js/app.js"></script>
   </body>
 </html>
