--- a/info.html
+++ b/info.html
@@ -10,7 +10,7 @@
       href="favicon-196x196.png"
       sizes="196x196"
     />
-    <link rel="stylesheet" href="build/assets/css/main.min.css" />
+    <link rel="stylesheet" href="build/assets/css/style.css" />
     <!-- Video by thiago japyassu on pexels.com - https://www.pexels.com/@japyassu -->
     <script>
       document.addEventListener("DOMContentLoaded", function () {
@@ -27,7 +27,6 @@
         <ul class="nav__list">
           <li class="nav__item"><a href="index.html">HOME</a></li>
           <li class="nav__item"><a href="#">PORTFOLIO</a></li>
-
           <li class="nav__item active"><a href="info.html">INFO</a></li>
           <li class="nav__item"><a href="#">CONTACT</a></li>
         </ul>
@@ -47,7 +46,7 @@
         </p>
       </div>
     </footer>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/source/js/app.js"></script>
   </body>
 </html>
