--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
       href="favicon-196x196.png"
       sizes="196x196"
     />
-    <link rel="stylesheet" href="build/assets/css/main.min.css" />
+    <link rel="stylesheet" href="build/assets/css/style.css" />
     <!-- Video by thiago japyassu on pexels.com - https://www.pexels.com/@japyassu -->
     <script>
       document.addEventListener("DOMContentLoaded", function () {
@@ -44,7 +44,7 @@
         </p>
       </div>
     </footer>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/source/js/app.js"></script>
   </body>
 </html>
