--- a/info.html
+++ b/info.html
@@ -22,13 +22,16 @@
   </head>
   <body>
     <header class="nav">
-      <nav>
+      <nav class="menu-opener">
+        <div class="menu-opener-inner"></div>
+      </nav>
+      <nav class="menu">
         <h1 class="nav__logo">ARY VIDOT</h1>
         <ul class="nav__list">
           <li class="nav__item"><a href="index.html">HOME</a></li>
-          <li class="nav__item"><a href="#">PORTFOLIO</a></li>
-          <li class="nav__item active"><a href="info.html">INFO</a></li>
-          <li class="nav__item"><a href="#">CONTACT</a></li>
+          <li class="nav__item"><a href="portfolio.html">PORTFOLIO</a></li>
+          <li class="nav__item"><a href="info.html">INFO</a></li>
+          <li class="nav__item"><a href="contact.html">CONTACT</a></li>
         </ul>
       </nav>
     </header>
