Info page, social, contact added

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
       sizes="196x196"
     />
     <link rel="stylesheet" href="build/assets/css/style.css" />
-    <!-- Video by thiago japyassu on pexels.com - https://www.pexels.com/@japyassu -->
-    <!-- Hamberger Menu by Alexandr Izumenko - https://codepen.io/Izumenko/pens/showcase -->
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const yrSpan = document.querySelector(".year");
@@ -21,10 +19,7 @@
       });
     </script>
   </head>
-  <!-- 
-  --primary-clr: #e9f1f7;
-  --secondary-clr: rgb(45,253,185);
-  --tertiary-clr: rgb(255,20,86); -->
+
   <body>
     <header class="nav">
       <nav class="menu-opener">
@@ -60,13 +55,38 @@
         </div>
 
         <a href="contact.html" class="btn">GET IN TOUCH</a>
+        <section class="social">
+          <ul class="social__list">
+            <li class="social__list">
+              <a
+                class="social__list-link"
+                href="https://github.com/AryVidot"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <img src="build/assets/logo/github.svg" alt="GitHub logo"
+              /></a>
+            </li>
+            <li class="social__link">
+              <a
+                class="social__list-link"
+                href="https://www.instagram.com/ary.vidot_dev/"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img
+                  src="build/assets/logo/instagram.svg"
+                  alt="Instagram logo"
+              /></a>
+            </li>
+          </ul>
+        </section>
       </section>
     </main>
     <footer>
       <div class="copyright">
         <p>
           <span class="year">1980</span> -
-          <a href="www.aryvidot.com" target="_blank">ARY VIDOT</a
+          <a href="index.html" target="_blank">ARY VIDOT</a
           ><span class="dot"> -</span> ALL RIGHTS RESERVED
         </p>
       </div>
