--- a/info.html
+++ b/info.html
@@ -35,21 +35,85 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <section>
-        <h1>INFO</h1>
+    <main class="page-wrapper">
+      <section class="info">
+        <h2 class="info__title">INFO</h2>
+        <p class="info__text">
+          I am a web developer, thinker, husband & father, passionate about
+          compelling and simple design.
+        </p>
+        <p class="info__text">
+          Right now, I'm looking for a full-time position while perfecting my
+          skills.
+        </p>
       </section>
+      <!-- <hr> -->
+      <section class="language">
+        <h3 class="language__title" >Languages, Frameworks and Technologies</h3>
+        <ul class="language__list" >
+          <li class="language___list-item">HTML5</li>
+          <li class="language___list-item">CSS3</li>
+          <li class="language___list-item">JavaScript</li>
+        </ul>
+      </section>
+
+
+        <section class="social">
+          <h3 class="social__title">Follow Me</h3>
+          <ul class="social__list">
+            <li class="social__list">
+              <a class="social__list-link"
+                href="https://github.com/AryVidot"
+                target="_blank"
+                rel="noopener noreferrer"
+                > <img src="build/assets/logo/github.svg" alt="GitHub logo"></a>
+            </li>
+            <li class="social__link">
+              <a class="social__list-link"
+                href="https://www.instagram.com/ary.vidot_dev/"
+                target="_blank"
+                rel="noopener noreferrer"
+                ><img src="build/assets/logo/instagram.svg" alt="Instagram logo"></a>
+            </li>
+          </ul>
+        </section>
+  
+        <section class="contact">
+          <h3 class="contact__title">Contact Me</h3>
+            <ul class="contact__list">
+              <li class="contact__list-link">
+                <a href="contact.html"> <img src="build/assets/logo/email.svg" alt="mail logo"></a>
+              </li>
+            </li>
+            <li class="social__list-link">
+              <a href="https://wa.me/347896512788"> <img src="build/assets/logo/whatsapp.svg" alt="whatsapp logo"><WhatsApp</a>
+            </li>
+            </ul>
+         </section>
+  
+
+       <!-- <hr> -->
+       <section class="download">
+        <a class="download__cv" href="cv.html" >DOWNLOAD CV</a>
+      </section>
+
+
     </main>
+
     <footer>
       <div class="copyright">
         <p>
           <span class="year">2020</span> -
-          <a href="www.aryvidot.com" target="_blank">Ary Vidot</a
+          <a href="index.html" target="_blank">Ary Vidot</a
           ><span class="dot">.</span> All rights reserved
         </p>
       </div>
     </footer>
+
+
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/source/js/app.js"></script>
   </body>
 </html>
+ 
