--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
       <div class="copyright">
         <p>
           <span class="year">2020</span> -
-          <a href="www.aryvidot.com" target="_blank">Ary Vidot</a
+          <a href="index.html" target="_blank">Ary Vidot</a
           ><span class="dot">.</span> All rights reserved
         </p>
       </div>
