Portfolio page created

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,6 @@
       sizes="196x196"
     />
     <link rel="stylesheet" href="build/assets/css/style.css" />
-    <!-- Video by thiago japyassu on pexels.com - https://www.pexels.com/@japyassu -->
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const yrSpan = document.querySelector(".year");
@@ -35,9 +34,16 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <section></section>
-    </main>
+
+    <main class="page-wrapper">
+      <section class="portfolio">
+        <h2 class="portfolio__title">PORTFOLIO</h2>
+        <p class="portfolio__text">
+          I've been working on the following projects.
+        </p>
+      </section>
+
+    <main/>
     <footer>
       <div class="copyright">
         <p>
