--- a/info.html
+++ b/info.html
@@ -11,6 +11,8 @@
       sizes="196x196"
     />
     <link rel="stylesheet" href="build/assets/css/style.css" />
+    <link rel="stylesheet" href="build/assets/css/menu.css" />
+    <link rel="stylesheet" href="build/assets/css/footer.css" />
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const yrSpan = document.querySelector(".year");
@@ -34,28 +36,28 @@
         </ul>
       </nav>
     </header>
-    <main class="page-wrapper">
-      <section class="info">
-        <h2 class="info__title">INFO</h2>
-        <p class="info__text">
-          Hi, I am <span>Ary</span>. I write code, think about new projects and passionate about
-          compelling and simple design. I am also a husband & father who loves cooking too. 
-        </p>
-        <p class="info__text">
-          Right now, I'm looking for a full-time position while perfecting my
-          skills.
-        </p>
-      </section>
-      <!-- <hr> -->
-      <section class="language">
-        <h3 class="language__title" >Languages, Frameworks and Technologies</h3>
-        <ul class="language__list" >
-          <li class="language___list-item">HTML5</li>
-          <li class="language___list-item">CSS3</li>
-          <li class="language___list-item">JavaScript</li>
-        </ul>
-      </section>
-
+    <main>
+      <section class="ctnr">
+        <section class="info">
+          <h2 class="info__title">INFO</h2>
+          <p class="info__text">
+            Hi, I am <span>Ary</span>. I write code, think about new projects and passionate about
+            compelling and simple design. I am also a husband & father who loves cooking too. 
+          </p>
+          <p class="info__text">
+            Right now, I'm looking for a full-time position while perfecting my
+            skills.
+          </p>
+        </section>
+        <!-- <hr> -->
+        <section class="language">
+          <h3 class="language__title" >Languages, Frameworks and Technologies</h3>
+          <ul class="language__list" >
+            <li class="language___list-item">HTML5</li>
+            <li class="language___list-item">CSS3</li>
+            <li class="language___list-item">JavaScript</li>
+          </ul>
+        </section>
 
         <section class="social">
           <h3 class="social__title">Follow Me</h3>
@@ -89,14 +91,13 @@
             </li>
             </ul>
          </section>
-  
 
        <!-- <hr> -->
        <section class="download">
         <a class="download__cv" href="cv.html" >DOWNLOAD CV</a>
       </section>
 
-
+    </section>
     </main>
 
     <footer>
