--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,8 @@
       sizes="196x196"
     />
     <link rel="stylesheet" href="build/assets/css/style.css" />
+    <link rel="stylesheet" href="build/assets/css/menu.css" />
+    <link rel="stylesheet" href="build/assets/css/footer.css" />
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const yrSpan = document.querySelector(".year");
@@ -35,8 +37,8 @@
       </nav>
     </header>
 
-    <main class="page-wrapper">
-      <section class="portfolio">
+    <main>
+      <section class="portfolio ctnr">
         <h2 class="portfolio__title">PORTFOLIO</h2>
         <p class="portfolio__text">
           I've been working on the following projects.
