--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,74 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CV</title>
+    <!-- <link rel="stylesheet" href="/build/assets/css/style.css" /> -->
+    <link rel="stylesheet" href="/build/assets/css/style.css" />
+    <link rel="stylesheet" href="/build/assets/css/menu.css" />
+    <link rel="stylesheet" href="build/assets/css/footer.css" />
+
+    <title>Ary Vidot - CV</title>
   </head>
-  <body></body>
+
+  <body>
+    <section class="ctnr">
+      <header>
+        <img
+          src="/build/assets/img/AryProfilePhoto.png"
+          alt="Ary Vidot Photo"
+        />
+
+        <section>
+          <h1>Ary Vidot</h1>
+          <p>Front-End Developer</p>
+        </section>
+        <section>
+          <address>
+            15 Corinium Gate <br />
+            St Albans <br />
+            Hertfordshire <br />
+            AL3 4HX
+          </address>
+        </section>
+        <section>
+          <address>
+            +44 7896 512788 <br />
+            Website <br />
+            aryvidot.dev@gmail.com
+          </address>
+        </section>
+      </header>
+      <hr />
+      <main>
+        <section>
+          <h1>OBJECTIVE</h1>
+          <p></p>
+        </section>
+        <section>
+          <h1>Work Experience</h1>
+          <table>
+            <tr>
+              <td>date</td>
+            </tr>
+          </table>
+        </section>
+        <section>
+          <h1>Eductation</h1>
+        </section>
+        <section>
+          <h1>Certifications</h1>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </section>
+        <section>
+          <h1>Skills</h1>
+        </section>
+        <section>
+          <h1>Hobbies</h1>
+        </section>
+      </main>
+    </section>
+  </body>
 </html>
