amend styles.css

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
                 </label>
               </div>
             </form>
-            <button class="btn" type="submit" name="submit">Submit</button>
+            <button class="form-btn" type="submit" name="submit">SUBMIT</button>
           </section>
         </div>
       </section>
