--- a/portfolio.html
+++ b/portfolio.html
@@ -38,13 +38,16 @@
     </header>
 
     <main>
-      <section class="portfolio ctnr">
-        <h2 class="portfolio__title">PORTFOLIO</h2>
-        <p class="portfolio__text">
-          I've been working on the following projects.
-        </p>
+      <section class="ctnr">
+        <div class="intro">
+          <section class="intro__content">
+            <h2 class="intro__title">PORTFOLIO</h2>
+            <p class="intro__text">
+              I've been working on the following projects.
+            </p>
+          </section>
+        </div>
       </section>
-
     <main/>
     <footer>
       <div class="copyright">
