harmonise style across pages

--- a/cv.html
+++ b/cv.html
@@ -54,7 +54,7 @@
           </table>
         </section>
         <section>
-          <h1>Eductation</h1>
+          <h1>Education</h1>
         </section>
         <section>
           <h1>Certifications</h1>
