--- a/info.html
+++ b/info.html
@@ -21,6 +21,7 @@
       });
     </script>
   </head>
+
   <body>
     <header class="nav">
       <nav class="menu-opener">
@@ -36,22 +37,27 @@
         </ul>
       </nav>
     </header>
+
     <main>
       <section class="ctnr">
-        <section class="info">
-          <h2 class="info__title">INFO</h2>
-          <p class="info__text">
-            Hi, I am <span>Ary</span>. I write code, think about new projects and passionate about
-            compelling and simple design. I am also a husband & father who loves cooking too. 
-          </p>
-          <p class="info__text">
-            Right now, I'm looking for a full-time position while perfecting my
-            skills.
-          </p>
-        </section>
-        <!-- <hr> -->
+        <div class="intro">
+          <section class="intro__content">
+            <h1 class="info__title">INFO</h1>
+            <p class="info__text">
+              Hi, I am <span>Ary</span>.
+            </p>
+            <p class="info__text">I write code, think about new projects and passionate about
+              compelling and simple design. I am also a husband & father who loves cooking too. 
+            </p>
+            <p class="info__text">
+              Right now, I'm looking for a full-time position while perfecting my
+              skills.
+            </p>
+          </section>
+        </div>
+        
         <section class="language">
-          <h3 class="language__title" >Languages, Frameworks and Technologies</h3>
+          <h2 class="language__title" >Languages, Frameworks and Technologies</h2>
           <ul class="language__list" >
             <li class="language___list-item">HTML5</li>
             <li class="language___list-item">CSS3</li>
@@ -60,7 +66,7 @@
         </section>
 
         <section class="social">
-          <h3 class="social__title">Follow Me</h3>
+          <h2 class="social__title">Follow Me</h2>
           <ul class="social__list">
             <li class="social__list">
               <a class="social__list-link"
@@ -80,7 +86,7 @@
         </section>
   
         <section class="contact">
-          <h3 class="contact__title">Contact Me</h3>
+          <h2 class="contact__title">Contact Me</h2>
             <ul class="contact__list">
               <li class="contact__list-link">
                 <a href="contact.html"> <img src="build/assets/logo/email.svg" alt="mail logo"></a>
@@ -92,9 +98,8 @@
             </ul>
          </section>
 
-       <!-- <hr> -->
        <section class="download">
-        <a class="download__cv" href="cv.html" >DOWNLOAD CV</a>
+        <a class="download__cv" href="cv.html" target="_blank">DOWNLOAD CV</a>
       </section>
 
     </section>
