--- a/portfolio.html
+++ b/portfolio.html
@@ -41,11 +41,14 @@
       <section class="ctnr">
         <div class="intro">
           <section class="intro__content">
-            <h2 class="intro__title">PORTFOLIO</h2>
+            <h1 class="intro__title">PORTFOLIO</h1>
             <p class="intro__text">
               I've been working on the following projects.
             </p>
           </section>
+        </div>
+        <div class="content">
+          
         </div>
       </section>
     <main/>
