--- a/info.html
+++ b/info.html
@@ -43,66 +43,35 @@
         <div class="intro">
           <section class="intro__content">
             <h1 class="info__title">INFO</h1>
+            <Img src="build/assets/img/IMG_20200729_142459.jpg"></Img>
+            <p class="info__text">I am <span>Ary</span>.</p>
             <p class="info__text">
-              Hi, I am <span>Ary</span>.
-            </p>
-            <p class="info__text">I write code, think about new projects and passionate about
-              compelling and simple design. I am also a husband & father who loves cooking too. 
+              I write code, think about new projects and passionate about
+              compelling and simple design. I am also a husband & father who
+              loves cooking too.
             </p>
             <p class="info__text">
-              Right now, I'm looking for a full-time position while perfecting my
-              skills.
+              Right now, I'm looking for a full-time position while perfecting
+              my skills.
             </p>
           </section>
         </div>
-        
+
         <section class="language">
-          <h2 class="language__title" >Languages, Frameworks and Technologies</h2>
-          <ul class="language__list" >
+          <h2 class="language__title">
+            Languages, Frameworks and Technologies
+          </h2>
+          <ul class="language__list">
             <li class="language___list-item">HTML5</li>
             <li class="language___list-item">CSS3</li>
             <li class="language___list-item">JavaScript</li>
           </ul>
         </section>
 
-        <section class="social">
-          <h2 class="social__title">Follow Me</h2>
-          <ul class="social__list">
-            <li class="social__list">
-              <a class="social__list-link"
-                href="https://github.com/AryVidot"
-                target="_blank"
-                rel="noopener noreferrer"
-                > <img src="build/assets/logo/github.svg" alt="GitHub logo"></a>
-            </li>
-            <li class="social__link">
-              <a class="social__list-link"
-                href="https://www.instagram.com/ary.vidot_dev/"
-                target="_blank"
-                rel="noopener noreferrer"
-                ><img src="build/assets/logo/instagram.svg" alt="Instagram logo"></a>
-            </li>
-          </ul>
+        <section class="download">
+          <a class="download__cv" href="cv.html" target="_blank">DOWNLOAD CV</a>
         </section>
-  
-        <section class="contact">
-          <h2 class="contact__title">Contact Me</h2>
-            <ul class="contact__list">
-              <li class="contact__list-link">
-                <a href="contact.html"> <img src="build/assets/logo/email.svg" alt="mail logo"></a>
-              </li>
-            </li>
-            <li class="social__list-link">
-              <a href="https://wa.me/347896512788"> <img src="build/assets/logo/whatsapp.svg" alt="whatsapp logo"><WhatsApp</a>
-            </li>
-            </ul>
-         </section>
-
-       <section class="download">
-        <a class="download__cv" href="cv.html" target="_blank">DOWNLOAD CV</a>
       </section>
-
-    </section>
     </main>
 
     <footer>
@@ -115,10 +84,7 @@
       </div>
     </footer>
 
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/source/js/app.js"></script>
   </body>
 </html>
- 
