change extension for assets files

--- a/cv.html
+++ b/cv.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="/build/assets/css/style.css" /> -->
-    <link rel="stylesheet" href="/build/assets/css/style.css" />
-    <link rel="stylesheet" href="/build/assets/css/menu.css" />
-    <link rel="stylesheet" href="build/assets/css/footer.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/menu.css" />
+    <link rel="stylesheet" href="assets/css/footer.css" />
 
     <title>Ary Vidot - CV</title>
   </head>
@@ -14,10 +14,7 @@
   <body>
     <section class="ctnr">
       <header>
-        <img
-          src="/build/assets/img/AryProfilePhoto.png"
-          alt="Ary Vidot Photo"
-        />
+        <img src="/assets/img/jacket-no-glasses.jpg" alt="Ary Vidot Photo" />
 
         <section>
           <h1>Ary Vidot</h1>
