--- a/contact.html
+++ b/contact.html
@@ -7,13 +7,13 @@
     <link
       rel="icon"
       type="image/png"
-      href="favicon-196x196.png"
+      href="assets/img/My-Avatar.png"
       sizes="196x196"
     />
-    <link rel="stylesheet" href="build/assets/css/style.css" />
-    <link rel="stylesheet" href="build/assets/css/menu.css" />
-    <link rel="stylesheet" href="build/assets/css/footer.css" />
-    <link rel="stylesheet" href="build/assets/css/form.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/menu.css" />
+    <link rel="stylesheet" href="assets/css/footer.css" />
+    <link rel="stylesheet" href="assets/css/form.css" />
 
     <!-- Video by thiago japyassu on pexels.com - https://www.pexels.com/@japyassu -->
     <script>
@@ -91,14 +91,14 @@
                     href="https://github.com/AryVidot"
                     target="_blank"
                     rel="noopener noreferrer"
-                    > <img src="build/assets/logo/github.svg" alt="GitHub logo"></a>
+                    > <img src="assets/logo/github.svg" alt="GitHub logo"></a>
                 </li>
                 <li class="social__link">
                   <a class="social__list-link"
                     href="https://www.instagram.com/ary.vidot_dev/"
                     target="_blank"
                     rel="noopener noreferrer"
-                    ><img src="build/assets/logo/instagram.svg" alt="Instagram logo"></a>
+                    ><img src="/assets/logo/instagram.svg" alt="Instagram logo"></a>
                 </li>
               </ul>
         </section>
@@ -107,11 +107,11 @@
           <h2 class="contact__title">Contact Me</h2>
             <ul class="contact__list">
               <li class="contact__list-link">
-                <a href="contact.html"> <img src="build/assets/logo/email.svg" alt="mail logo"></a>
+                <a href="contact.html"> <img src="/assets/logo/email.svg" alt="mail logo"></a>
               </li>
             </li>
             <li class="social__list-link">
-              <a href="https://wa.me/347896512788"> <img src="build/assets/logo/whatsapp.svg" alt="whatsapp logo"><WhatsApp</a>
+              <a href="https://wa.me/347896512788"> <img src="/assets/logo/whatsapp.svg" alt="whatsapp logo"><WhatsApp</a>
             </li>
             </ul>
          </section>
@@ -128,6 +128,6 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/source/js/app.js"></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
