--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Ary Vidot - Front-End Dev</title>
+    <title>ARY VIDOT - Front-End Developer</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="icon"
       type="image/png"
-      href="favicon-196x196.png"
+      href="assets/img/My-Avatar.png"
       sizes="196x196"
     />
-    <link rel="stylesheet" href="build/assets/css/style.css" />
-    <link rel="stylesheet" href="build/assets/css/menu.css" />
-    <link rel="stylesheet" href="build/assets/css/footer.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/menu.css" />
+    <link rel="stylesheet" href="assets/css/footer.css" />
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const yrSpan = document.querySelector(".year");
@@ -41,7 +41,7 @@
       <section class="hero ctnr">
         <div class="hero__video">
           <video
-            src="build/assets/vid/BoatInSea_1937807.mp4"
+            src="assets/vid/BoatInSea_1937807.mp4"
             id="hero-vid"
             type="video/mp4"
             autoplay
@@ -98,6 +98,6 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/source/js/app.js"></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
