--- a/info.html
+++ b/info.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Ary Vidot - INFO</title>
+    <title>ARY VIDOT - INFO</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="icon"
       type="image/png"
-      href="favicon-196x196.png"
+      href="assets/img/My-Avatar.png"
       sizes="196x196"
     />
-    <link rel="stylesheet" href="build/assets/css/style.css" />
-    <link rel="stylesheet" href="build/assets/css/menu.css" />
-    <link rel="stylesheet" href="build/assets/css/footer.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/menu.css" />
+    <link rel="stylesheet" href="assets/css/footer.css" />
+    <link rel="stylesheet" href="assets/css/info.css" />
+
+
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const yrSpan = document.querySelector(".year");
@@ -43,7 +46,7 @@
         <div class="intro">
           <section class="intro__content">
             <h1 class="info__title">INFO</h1>
-            <Img src="build/assets/img/IMG_20200729_142459.jpg"></Img>
+            <img src="assets/img/smile-glasses.jpg" alt="Ary portrait"></img>
             <p class="info__text">I am <span>Ary</span>.</p>
             <p class="info__text">
               I write code, think about new projects and passionate about
@@ -85,6 +88,6 @@
     </footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/source/js/app.js"></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
