--- a/portfolio.html
+++ b/portfolio.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Ary Vidot - PORTFOLIO</title>
+    <title>ARY VIDOT - PORTFOLIO</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
       rel="icon"
       type="image/png"
-      href="favicon-196x196.png"
+      href="assets/img/My-Avatar.png"
       sizes="196x196"
     />
-    <link rel="stylesheet" href="build/assets/css/style.css" />
-    <link rel="stylesheet" href="build/assets/css/menu.css" />
-    <link rel="stylesheet" href="build/assets/css/footer.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/menu.css" />
+    <link rel="stylesheet" href="assets/css/footer.css" />
+    <link rel="stylesheet" href="assets/css/portfolio.css" />
+
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const yrSpan = document.querySelector(".year");
@@ -62,6 +64,6 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/source/js/app.js"></script>
+    <script src="/js/app.js"></script>
   </body>
 </html>
