--- a/portfolio.html
+++ b/portfolio.html
@@ -64,6 +64,6 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/js/app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
