footer in same page - no scrolling down needed

--- a/cv.html
+++ b/cv.html
@@ -14,7 +14,7 @@
   <body>
     <section class="ctnr">
       <header>
-        <img src="/assets/img/jacket-no-glasses.jpg" alt="Ary Vidot Photo" />
+        <img src="/assets/img/jacket-no-glasses.jpg" alt="Ary portrait" />
 
         <section>
           <h1>Ary Vidot</h1>
