--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h1 class="hero__logo">
             ARY VIDOT
           </h1>
-          <h2 class="hero__description">Web Developer</h2>
+          <h2 class="hero__description">Front-end Web Developer</h2>
 
           <a href="contact.html" class="btn">GET IN TOUCH</a>
         </div>
