change in social section in contact.html

--- a/contact.html
+++ b/contact.html
@@ -83,38 +83,44 @@
             <button class="form-btn" type="submit" name="submit">SUBMIT</button>
           </section>
 
+          <section class="contact">
+            <h2 class="contact__title">Call Me</h2>
+            <ul class="contact__list">
+              <li class="social__list-link">
+                <a href="https://wa.me/347896512788">
+                  <img
+                    src="/assets/logo/whatsapp.svg"
+                    alt="whatsapp logo"
+                  /><WhatsApp</a
+                >
+              </li>
+            </ul>
+          </section>
+
           <section class="social">
             <h2 class="social__title">Follow Me</h2>
-              <ul class="social__list">
-                <li class="social__list">
-                  <a class="social__list-link"
-                    href="https://github.com/AryVidot"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    > <img src="assets/logo/github.svg" alt="GitHub logo"></a>
-                </li>
-                <li class="social__link">
-                  <a class="social__list-link"
-                    href="https://www.instagram.com/ary.vidot_dev/"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    ><img src="/assets/logo/instagram.svg" alt="Instagram logo"></a>
-                </li>
-              </ul>
-        </section>
-  
-        <section class="contact">
-          <h2 class="contact__title">Contact Me</h2>
-            <ul class="contact__list">
-              <li class="contact__list-link">
-                <a href="contact.html"> <img src="/assets/logo/email.svg" alt="mail logo"></a>
+            <ul class="social__list">
+              <li class="social__list">
+                <a
+                  class="social__list-link"
+                  href="https://github.com/AryVidot"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="assets/logo/github.svg" alt="GitHub logo"
+                /></a>
               </li>
-            </li>
-            <li class="social__list-link">
-              <a href="https://wa.me/347896512788"> <img src="/assets/logo/whatsapp.svg" alt="whatsapp logo"><WhatsApp</a>
-            </li>
+              <li class="social__link">
+                <a
+                  class="social__list-link"
+                  href="https://www.instagram.com/ary.vidot_dev/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><img src="/assets/logo/instagram.svg" alt="Instagram logo"
+                /></a>
+              </li>
             </ul>
-         </section>
+          </section>
         </div>
       </section>
     </main>
