--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="assets/css/menu.css" />
     <link rel="stylesheet" href="assets/css/footer.css" />
     <link rel="stylesheet" href="assets/css/contact.css" />
+    <link rel="stylesheet" href="assets/css/form.css" />
+
 
     <!-- Video by thiago japyassu on pexels.com - https://www.pexels.com/@japyassu -->
     <script>
@@ -44,7 +46,7 @@
       <section class="ctnr">
         <div class="intro">
           <section class="intro__content">
-            <h1 class="intro__title">CONTACT</h1>
+            <h2 class="intro__title">CONTACT</h2>
 
             <p>Don't be shy and say hello!</p>
             <p>We can meet for a coffee and see how we can work together.</p>
@@ -74,31 +76,30 @@
               </div>
 
               <div class="message">
-                <textarea name="message" id="" cols="30" rows="10"></textarea>
+                <textarea name="message" id="" cols="30" rows="10" required></textarea>
                 <label for="message" class="form__label">
                   <span class="form__message">Message</span>
                 </label>
               </div>
+              <input class="form-btn" type="submit" name="submit"></input>
             </form>
-            <button class="form-btn" type="submit" name="submit">SUBMIT</button>
           </section>
 
           <section class="contact">
-            <h2 class="contact__title">Call Me</h2>
+            <h3 class="contact__title">Call Me</h3>
             <ul class="contact__list">
               <li class="social__list-link">
                 <a href="https://wa.me/347896512788">
                   <img
                     src="/assets/logo/whatsapp.svg"
                     alt="whatsapp logo"
-                  /><WhatsApp</a
-                >
+                  /></a>
               </li>
             </ul>
           </section>
 
           <section class="social">
-            <h2 class="social__title">Follow Me</h2>
+            <h3 class="social__title">Follow Me</h3>
             <ul class="social__list">
               <li class="social__list">
                 <a
