Add fontAwesome stylesheet to html

--- a/info.html
+++ b/info.html
@@ -10,6 +10,7 @@
       href="assets/img/My-Avatar.png"
       sizes="196x196"
     />
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/menu.css" />
     <link rel="stylesheet" href="assets/css/footer.css" />
