--- a/form.html
+++ b/form.html
@@ -3,12 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ary Vidot - INFO</title>
+    <title>Ary Vidot - FORM/</title>
     <link
       rel="icon"
       type="image/png"
       href="assets/img/My-Avatar.png"
       sizes="196x196"
+    />
+    <!-- <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    /> -->
+    <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/menu.css" />
@@ -42,21 +52,26 @@
 
     <main>
       <section class="ctnr">
-        <div class="intro">
-          <h2 class="intro__title">CONTACT ME</h2>
-          <p>Don't be shy and say hello!</p>
-          <p>We can meet for a coffee and see how we can work together.</p>
-          <p style="display: none;">
-            Why not checking my <a href="#">Aeropress Receipe App</a> and send
-            your details over.
-          </p>
-        </div>
         <section class="form">
           <form
             action="mailto:aryvidot.dev@gmail.com"
             method="post"
             enctype="text/plain"
           >
+            <div class="intro">
+              <div class="intro__title">
+                <h2>CONTACT</h2>
+                <img src="/assets/img/Smile-LG.jpg" alt="Ary Smile photo" />
+              </div>
+              <p>Don't be shy and say hello!</p>
+              <p>We can meet for a coffee and see how we can work together.</p>
+              <p>Try out the form I created below...</p>
+              <p style="display: none">
+                Why not checking my <a href="#">Aeropress Receipe App</a> and
+                send your details over.
+              </p>
+            </div>
+
             <div class="name">
               <input type="text" name="name" required />
               <label for="name" class="form__label">Name</label>
@@ -65,10 +80,10 @@
               <input type="email" name="email" autocomplete="off" required />
               <label for="email" class="form__label">Email</label>
             </div>
-            <div class="subject">
+            <!-- <div class="subject">
               <input type="text" name="subject" required />
               <label for="subject" class="form__label">Subject</label>
-            </div>
+            </div> -->
             <div class="message">
               <textarea
                 name="message"
@@ -84,9 +99,71 @@
             </div>
           </form>
         </section>
+
+        <section class="contact">
+          <section class="contact__direct">
+            <h3 class="contact__title">Or Contact Me Directly...</h3>
+            <ul class="contact__list">
+              <li class="contact__list-link">
+                <a href="https://wa.me/347896512788">
+                  <img src="/assets/logo/whatsapp.svg" alt="whatsapp logo"
+                /></a>
+              </li>
+              <li class="contact__list-link">
+                <a
+                  href="mailto:aryvidot.dev@gmail.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><img src="/assets/logo/" alt="mail logo"
+                /></a>
+              </li>
+              <li class="contact__list-link">
+                <a
+                  href="https://github.com/AryVidot"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="assets/logo/github.svg" alt="GitHub logo"
+                /></a>
+              </li>
+              <li class="contact__list-link">
+                <a
+                  href="https://www.linkedin.com/in/ary-vidot/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  <img src="assets/logo/" alt="LinkedIn logo"
+                /></a>
+              </li>
+              <li class="contact__list-link">
+                <a
+                  href="https://www.instagram.com/ary.vidot_dev/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><img src="/assets/logo/instagram.svg" alt="Instagram logo"
+                /></a>
+              </li>
+            </ul>
+          </section>
+        </section>
       </section>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
     <script src="app.js"></script>
   </body>
 </html>
