add icons to info.html and form.html

--- a/form.html
+++ b/form.html
@@ -16,6 +16,7 @@
       integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
       crossorigin="anonymous"
     /> -->
+    <script src="https://use.fontawesome.com/0148eaae50.js"></script>
     <link
       rel="stylesheet"
       href="path/to/font-awesome/css/font-awesome.min.css"
@@ -105,43 +106,41 @@
             <h3 class="contact__title">Or Contact Me Directly...</h3>
             <ul class="contact__list">
               <li class="contact__list-link">
-                <a href="https://wa.me/347896512788">
-                  <img src="/assets/logo/whatsapp.svg" alt="whatsapp logo"
-                /></a>
+                <a href="https://wa.me/347896512788"
+                  ><i class="fa fa-whatsapp" aria-hidden="true"></i
+                ></a>
               </li>
               <li class="contact__list-link">
                 <a
                   href="mailto:aryvidot.dev@gmail.com"
                   target="_blank"
                   rel="noopener noreferrer"
-                  ><img src="/assets/logo/" alt="mail logo"
-                /></a>
+                  ><i class="fa fa-envelope" aria-hidden="true"></i
+                ></a>
               </li>
               <li class="contact__list-link">
                 <a
                   href="https://github.com/AryVidot"
                   target="_blank"
                   rel="noopener noreferrer"
-                >
-                  <img src="assets/logo/github.svg" alt="GitHub logo"
-                /></a>
+                  ><i class="fa fa-github" aria-hidden="true"> </i
+                ></a>
               </li>
               <li class="contact__list-link">
                 <a
                   href="https://www.linkedin.com/in/ary-vidot/"
                   target="_blank"
                   rel="noopener noreferrer"
-                >
-                  <img src="assets/logo/" alt="LinkedIn logo"
-                /></a>
+                  ><i class="fa fa-linkedin-square" aria-hidden="true"></i
+                ></a>
               </li>
               <li class="contact__list-link">
                 <a
                   href="https://www.instagram.com/ary.vidot_dev/"
                   target="_blank"
                   rel="noopener noreferrer"
-                  ><img src="/assets/logo/instagram.svg" alt="Instagram logo"
-                /></a>
+                  ><i class="fa fa-instagram" aria-hidden="true"></i
+                ></a>
               </li>
             </ul>
           </section>
