--- a/info.html
+++ b/info.html
@@ -66,9 +66,13 @@
             Languages, Frameworks and Technologies
           </h2>
           <ul class="language__list">
-            <li class="language___list-item">HTML5</li>
-            <li class="language___list-item">CSS3</li>
-            <li class="language___list-item">JavaScript</li>
+            <li class="language___list-item"><i class="fab fa-html5" aria-hidden="true"></i></li>
+            <li class="language___list-item"><i class="fab fa-css3" aria-hidden="true"></i></li>
+            <li class="language___list-item"><i class="fab fa-node-js" aria-hidden="true"></i></li>
+            <li class="language___list-item"><i class="fab fa-js" aria-hidden="true"></i></li>
+            <li class="language___list-item"><i class="fab fa-react fa-pulse fa-spin fa-3x" aria-hidden="true"></i></li>
+            <li class="language___list-item"><i class="fab fa-bootstrap" aria-hidden="true"></i></li>
+            <li class="language___list-item"><i class="fab fa-sass" aria-hidden="true"></i></li>
           </ul>
         </section>
 
