remove contact.html - replaced by contact-form.html - Menu css amend

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <li class="nav__item"><a href="index.html">HOME</a></li>
           <li class="nav__item"><a href="portfolio.html">PORTFOLIO</a></li>
           <li class="nav__item"><a href="info.html">INFO</a></li>
-          <li class="nav__item"><a href="contact.html">CONTACT</a></li>
+          <li class="nav__item"><a href="contact-form.html">CONTACT</a></li>
         </ul>
       </nav>
     </header>
@@ -61,7 +61,7 @@
           <h1 class="hero__logo">ARY VIDOT</h1>
           <h2 class="hero__description">Front-end Web Developer</h2>
 
-          <a href="contact.html" class="btn">GET IN TOUCH</a>
+          <a href="contact-form.html" class="btn">GET IN TOUCH</a>
         </div>
 
         <!-- <section class="social">
