--- a/info.html
+++ b/info.html
@@ -37,7 +37,7 @@
           <li class="nav__item"><a href="index.html">HOME</a></li>
           <li class="nav__item"><a href="portfolio.html">PORTFOLIO</a></li>
           <li class="nav__item"><a href="info.html">INFO</a></li>
-          <li class="nav__item"><a href="contact.html">CONTACT</a></li>
+          <li class="nav__item"><a href="contact-form.html">CONTACT</a></li>
         </ul>
       </nav>
     </header>
@@ -67,7 +67,7 @@
           </h2>
           <ul class="language__list">
             <li class="language___list-item"><i class="fab fa-html5" aria-hidden="true"></i></li>
-            <li class="language___list-item"><i class="fab fa-css3" aria-hidden="true"></i></li>
+            <li class="language___list-item"><i class="fab fa-css3-alt" aria-hidden="true"></i></li>
             <li class="language___list-item"><i class="fab fa-node-js" aria-hidden="true"></i></li>
             <li class="language___list-item"><i class="fab fa-js" aria-hidden="true"></i></li>
             <li class="language___list-item"><i class="fab fa-react fa-pulse fa-spin fa-3x" aria-hidden="true"></i></li>
