--- a/contact-form.html
+++ b/contact-form.html
@@ -10,12 +10,6 @@
       href="assets/img/My-Avatar.png"
       sizes="196x196"
     />
-    <!-- <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
-      crossorigin="anonymous"
-    /> -->
     <script src="https://use.fontawesome.com/0148eaae50.js"></script>
     <link
       rel="stylesheet"
@@ -24,7 +18,6 @@
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/menu.css" />
     <link rel="stylesheet" href="assets/css/footer.css" />
-    <!-- <link rel="stylesheet" href="assets/css/contact.css" /> -->
     <link rel="stylesheet" href="assets/css/form.css" />
 
     <script>
@@ -46,7 +39,7 @@
           <li class="nav__item"><a href="index.html">HOME</a></li>
           <li class="nav__item"><a href="portfolio.html">PORTFOLIO</a></li>
           <li class="nav__item"><a href="info.html">INFO</a></li>
-          <li class="nav__item"><a href="contact.html">CONTACT</a></li>
+          <li class="nav__item"><a href="contact-form.html">CONTACT</a></li>
         </ul>
       </nav>
     </header>
@@ -81,10 +74,10 @@
               <input type="email" name="email" autocomplete="off" required />
               <label for="email" class="form__label">Email</label>
             </div>
-            <!-- <div class="subject">
+            <div class="subject">
               <input type="text" name="subject" required />
               <label for="subject" class="form__label">Subject</label>
-            </div> -->
+            </div>
             <div class="message">
               <textarea
                 name="message"
@@ -93,7 +86,7 @@
                 rows="10"
                 required
               ></textarea>
-              <label for="message" class="form__message">Message</label>
+              <label for="message" class="form__label">Message</label>
             </div>
             <div class="form-btn">
               <input type="submit" name="submit" value="submit" />
