--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
           <li class="nav__item"><a href="index.html">HOME</a></li>
           <li class="nav__item"><a href="portfolio.html">PORTFOLIO</a></li>
           <li class="nav__item"><a href="info.html">INFO</a></li>
-          <li class="nav__item"><a href="contact.html">CONTACT</a></li>
+          <li class="nav__item"><a href="contact-form.html">CONTACT</a></li>
         </ul>
       </nav>
     </header>
