amend info.html and css

--- a/contact-form.html
+++ b/contact-form.html
@@ -53,9 +53,9 @@
             enctype="text/plain"
           >
             <div class="intro">
-              <div class="intro__title">
-                <h2>CONTACT</h2>
-                <img src="/assets/img/Smile-LG.jpg" alt="Ary Smile photo" />
+              <div class="intro__content">
+                <h2 class="intro__title">CONTACT</h2>
+                <!-- <img src="/assets/img/Smile-LG.jpg" alt="Ary Smile photo" /> -->
               </div>
               <p>Don't be shy and say hello!</p>
               <p>We can meet for a coffee and see how we can work together.</p>
