--- a/info.html
+++ b/info.html
@@ -47,7 +47,7 @@
         <div class="intro">
           <section class="intro__content">
             <h1 class="info__title">INFO</h1>
-            <img src="assets/img/smile-glasses.jpg" alt="Ary portrait"></img>
+            <img src="assets/img/Smile-MD.jpg" alt="Ary portrait"></img>
             <p class="info__text">I am <span>Ary</span>.</p>
             <p class="info__text">
               I write code, think about new projects and passionate about
@@ -62,18 +62,20 @@
         </div>
 
         <section class="language">
-          <h2 class="language__title">
-            Languages, Frameworks and Technologies
-          </h2>
-          <ul class="language__list">
-            <li class="language___list-item"><i class="fab fa-html5" aria-hidden="true"></i></li>
-            <li class="language___list-item"><i class="fab fa-css3-alt" aria-hidden="true"></i></li>
-            <li class="language___list-item"><i class="fab fa-node-js" aria-hidden="true"></i></li>
-            <li class="language___list-item"><i class="fab fa-js" aria-hidden="true"></i></li>
-            <li class="language___list-item"><i class="fab fa-react fa-pulse fa-spin fa-3x" aria-hidden="true"></i></li>
-            <li class="language___list-item"><i class="fab fa-bootstrap" aria-hidden="true"></i></li>
-            <li class="language___list-item"><i class="fab fa-sass" aria-hidden="true"></i></li>
-          </ul>
+          <div class="language__content">
+            <h2 class="language__title">
+            Skills
+            </h2>
+          </div>
+          <div class="language__list">
+            <i class="fab fa-html5" aria-hidden="true"></i>
+            <i class="fab fa-css3-alt" aria-hidden="true"></i>
+            <i class="fab fa-node-js" aria-hidden="true"></i>
+            <i class="fab fa-js" aria-hidden="true"></i>
+            <i class="fab fa-react fa-pulse fa-spin fa-3x" aria-hidden="true"></i>
+            <i class="fab fa-bootstrap" aria-hidden="true"></i>
+            <i class="fab fa-sass" aria-hidden="true"></i>
+          </div>
         </section>
 
         <section class="download">
